{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 309,
  "lineage": "3a1cbc9e-edb4-c948-3953-d200bfb39d2b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "pavlo_lb",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:767397862644:loadbalancer/app/pavlo-lb/9894a4aab436c994",
            "arn_suffix": "app/pavlo-lb/9894a4aab436c994",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "pavlo-lb-479950037.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:767397862644:loadbalancer/app/pavlo-lb/9894a4aab436c994",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pavlo-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a8cd655cdbff9833"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c6d233da8f2fc043"
              },
              {
                "subnet_id": "subnet-0ec853d046c64646e"
              }
            ],
            "subnets": [
              "subnet-0c6d233da8f2fc043",
              "subnet-0ec853d046c64646e"
            ],
            "vpc_id": "vpc-0f066f7b3d5a72e87",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_security_group.allow_all",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pavlo_listener",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:767397862644:listener/app/pavlo-lb/9894a4aab436c994/c89cc51863566f5d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:767397862644:targetgroup/pavlo-target-group/c7acbc156421a0c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:767397862644:listener/app/pavlo-lb/9894a4aab436c994/c89cc51863566f5d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:767397862644:loadbalancer/app/pavlo-lb/9894a4aab436c994",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_lb.pavlo_lb",
            "module.ec2.aws_lb_target_group.pavlo_lb_target_group",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_security_group.allow_all",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pavlo_lb_target_group",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:767397862644:targetgroup/pavlo-target-group/c7acbc156421a0c1",
            "arn_suffix": "targetgroup/pavlo-target-group/c7acbc156421a0c1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:767397862644:targetgroup/pavlo-target-group/c7acbc156421a0c1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pavlo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f066f7b3d5a72e87"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be03b101ad37b673",
            "route_table_id": "rtb-0653a2796a41b9656",
            "subnet_id": "subnet-0ec853d046c64646e"
          },
          "dependencies": [
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.my_route_table",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014143fec01679b3e",
            "route_table_id": "rtb-0653a2796a41b9656",
            "subnet_id": "subnet-0c6d233da8f2fc043"
          },
          "dependencies": [
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.my_route_table",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397862644:subnet/subnet-067e5a047e50e9d66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067e5a047e50e9d66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397862644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pavlo-private-subnet"
            },
            "tags_all": {
              "Name": "pavlo-private-subnet"
            },
            "vpc_id": "vpc-0f066f7b3d5a72e87"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397862644:subnet/subnet-0ec853d046c64646e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec853d046c64646e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397862644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f066f7b3d5a72e87"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397862644:subnet/subnet-0c6d233da8f2fc043",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6d233da8f2fc043",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397862644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f066f7b3d5a72e87"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397862644:internet-gateway/igw-04201b0e1e12d70f7",
            "id": "igw-04201b0e1e12d70f7",
            "owner_id": "767397862644",
            "tags": {
              "Name": "pavlo-vpc-igw"
            },
            "tags_all": {
              "Name": "pavlo-vpc-igw"
            },
            "vpc_id": "vpc-0f066f7b3d5a72e87"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397862644:route-table/rtb-0653a2796a41b9656",
            "id": "rtb-0653a2796a41b9656",
            "owner_id": "767397862644",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04201b0e1e12d70f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pavlo-vpc-rt"
            },
            "tags_all": {
              "Name": "pavlo-vpc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f066f7b3d5a72e87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397862644:security-group/sg-0a8cd655cdbff9833",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8cd655cdbff9833",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20240313111309398900000001",
            "name_prefix": "terraform-",
            "owner_id": "767397862644",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f066f7b3d5a72e87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767397862644:vpc/vpc-0f066f7b3d5a72e87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063db372773deeeb2",
            "default_route_table_id": "rtb-06271a2b1a2160dc9",
            "default_security_group_id": "sg-0972a2b7081aca002",
            "dhcp_options_id": "dopt-0fd59d3f37dfa6199",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f066f7b3d5a72e87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06271a2b1a2160dc9",
            "owner_id": "767397862644",
            "tags": {
              "Name": "pavlo-vpc"
            },
            "tags_all": {
              "Name": "pavlo-vpc"
            }
          }
        }
      ]
    }
  ]
}